--- a/MindIT/Base.lproj/Main.storyboard
+++ b/MindIT/Base.lproj/Main.storyboard
@@ -176,6 +176,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="foldAllImages" destination="BYZ-38-t0r" eventType="touchUpInside" id="yot-2I-vVA"/>
+                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="5" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="cz8-af-1Zn">
                                 <rect key="frame" x="162" y="22" width="63" height="42"/>
@@ -211,6 +214,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="countDown" destination="cz8-af-1Zn" id="ht7-7r-gpl"/>
                         <outlet property="imageView1" destination="uca-Ty-fo8" id="HLn-90-3ey"/>
                         <outlet property="imageView10" destination="3ZQ-2S-Ioc" id="ZSw-wE-bhg"/>
                         <outlet property="imageView11" destination="iB8-Qm-6Ku" id="KSq-B9-rkZ"/>
